--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
   </style>
 </head>
 <body>
-  <h1>24Spare Interactive Sales Dashboard</h1>
-  <p>Edit any values in the tables below, then click <b>Update Dashboard</b> to refresh all charts.</p>
-
+  <h1>24Spare Dashboard</h1>
   <!-- UPDATE SECTION -->
   <div class="container">
     <!-- Sales by Category -->
@@ -39,7 +37,6 @@
     <!-- Agent Performance (fully editable) -->
     <div class="panel">
       <h2>Agent Performance</h2>
-      <p>Add/remove rows as needed (right‑click → Insert row in browser’s “Inspect → Edit as HTML”, or edit file later).</p>
       <table id="tblAgents">
         <tr>
           <th>Agent Name</th>
@@ -77,7 +74,6 @@
     <!-- Product Inventory (fully editable) -->
     <div class="panel">
       <h2>Product Inventory Status</h2>
-      <p>Edit product names and quantities as required.</p>
       <table id="tblInventory">
         <tr>
           <th>Product Name</th>
@@ -289,3 +285,4 @@
   </script>
 </body>
 </html>
+
